# real-estate-demand-prediction

./: pyproject.toml
data/china-real-estate-demand-prediction/: baseline_submission.csv  test.csv
data/china-real-estate-demand-prediction/train/: city_indexes.csv  city_search_index.csv  land_transactions.csv  land_transactions_nearby_sectors.csv  new_house_transactions.csv  new_house_transactions_nearby_sectors.csv  pre_owned_house_transactions.csv  pre_owned_house_transactions_nearby_sectors.csv  sector_POI.csv
